--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "next": "9.3.1",
     "react": "16.13.0",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
